# tauri-sql

./: .gitignore  README.md  context.md  package-lock.json  package.json  svelte.config.js  vite.config.js
docs/superpowers/plans/: 2026-05-19-query-tabs-and-resizable-explorer.md
docs/superpowers/specs/: 2026-05-19-query-tabs-and-resizable-explorer-design.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  connection.rs  error.rs  explorer.rs  export.rs  file_io.rs  lib.rs  main.rs  pool.rs  profiles.rs  query.rs  session.rs  sql_safety.rs  types.rs
src/lib/: types.ts
src/lib/api/: explorer.ts  files.ts  invoke.ts  profiles.ts  query.ts  session.ts
src/lib/components/: ConfirmDialog.svelte  ConnectionForm.svelte  ConnectionList.svelte  ObjectExplorer.svelte  ObjectExplorerPane.svelte  QueryEditor.svelte  QueryRunningOverlay.svelte  QueryTabsBar.svelte  ResultGrid.svelte  ThemeToggle.svelte
src/lib/stores/: queryTabs.svelte.ts  session.svelte.ts  theme.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/workspace/: +page.svelte
